@@ -1,4 +1,5 @@
 3.4
+	+ Import current DHCP addresses in first setup and when enabling module
 	+ Added flag to notify when an ifup is set
 	+ Wait a bit in multigwRoutes to give time to dhcp/pppoe to register addresses
 	+ Implement replicationExcludeKeys() to avoid replication of ifaces in HA
